# MFDev-Scraper-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mfdev_scraper_sdk/: __init__.py  errors.py  library.py
test/: test_basic.py
