[build-system]
requires=["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name="mfdev_scraper"
version = "0.1.0"
description = "A lightweight Python SDK for web scraping, data cleaning, and CSV/Excel export."
readme = "README.md"
authors = [{name = "Miguel Fernandez"}]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["scraper"]
dependencies = ["curl_cffi = 0.13.0","pandas = 2.3.2","openpyxl = 3.1.5"]

[project.urls]
Homepage = "htpps://mfdev.vercel.app/"
Source = "https://example.com/repo"
Issues = "https://example.com/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mfdev_scraper_sdk"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["test"]